[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invest_routedem_tfa_range"
version = "0.0.1"
dependencies = [
    "natcap.invest>=3.18.0",
    "pygeoprocessing",
    "taskgraph"
]
description = "RouteDEM that computes a range of TFAs in a single run (an InVEST plugin)"

[tool.natcap.invest]
api_version = "v1"
package_name = "invest_routedem_tfa_range"
conda_dependencies = [
  "gdal",
  "python",
  "pygeoprocessing",
  "natcap.invest>=3.18.0"
]
